# film-collection

./: .env  .env.list  .env.prod  Dockerfile  Dockerfile.prod  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  models.py  pagination.py  schemas.py  search.py  swagger.py  urls.py
app/resources/: director_resources.py  film_resources.py  genre_resources.py  user_resouces.py
app/static/: swagger.json
migrations/: env.py
migrations/versions/: 2ba9b3711e85_initial_migration.py  6d4797afb4f9_.py  c905ff69a658_initial_migration.py  e13a85201c28_.py
tests/: conftest.py
tests/functional/: test_director.py  test_film.py  test_genre.py  test_users.py
tests/unit/: test_models.py
