[tool.poetry]
name = "flask"
version = "1.1.4"
description = ""
authors = ["Yuliia Kopysova <julykopysova97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pylint = "2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
